--- a/xbmc/settings/dialogs/CMakeLists.txt
+++ b/xbmc/settings/dialogs/CMakeLists.txt
@@ -1,9 +1,13 @@
-set(SOURCES GUIDialogContentSettings.cpp
+set(SOURCES GUIDialogAudioDSPManager.cpp
+            GUIDialogAudioDSPSettings.cpp
+            GUIDialogContentSettings.cpp
             GUIDialogSettingsBase.cpp
             GUIDialogSettingsManagerBase.cpp
             GUIDialogSettingsManualBase.cpp)
 
-set(HEADERS GUIDialogContentSettings.h
+set(HEADERS GUIDialogAudioDSPManager.h
+            GUIDialogAudioDSPSettings.h
+            GUIDialogContentSettings.h
             GUIDialogSettingsBase.h
             GUIDialogSettingsManagerBase.h
             GUIDialogSettingsManualBase.h)
