--- a/xbmc/settings/CMakeLists.txt
+++ b/xbmc/settings/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES AdvancedSettings.cpp
             AudioDSPSettings.cpp
             DiscSettings.cpp
             DisplaySettings.cpp
+            GameSettings.cpp
             MediaSettings.cpp
             MediaSourceSettings.cpp
             SettingAddon.cpp
@@ -20,6 +21,7 @@ set(HEADERS AdvancedSettings.h
             AudioDSPSettings.h
             DiscSettings.h
             DisplaySettings.h
+            GameSettings.h
             MediaSettings.h
             MediaSourceSettings.h
             SettingAddon.h
