Joysticks: Add IInputProvider abstraction

--- a/xbmc/input/joysticks/CMakeLists.txt
+++ b/xbmc/input/joysticks/CMakeLists.txt
@@ -23,6 +23,7 @@ set(HEADERS DeadzoneFilter.h
             IDriverHandler.h
             IDriverReceiver.h
             IInputHandler.h
+            IInputProvider.h
             IInputReceiver.h
             IKeymapHandler.h
             JoystickEasterEgg.h
