Joysticks: Refactor code behind new IActionHandler interface

--- a/xbmc/input/CMakeLists.txt
+++ b/xbmc/input/CMakeLists.txt
@@ -30,6 +30,7 @@ set(HEADERS Action.h
             ButtonTranslator.h
             CustomControllerTranslator.h
             GamepadTranslator.h
+            IActionHandler.h
             InertialScrollingHandler.h
             InputCodingTable.h
             InputCodingTableBaiduPY.h
