--- a/xbmc/input/joysticks/generic/CMakeLists.txt
+++ b/xbmc/input/joysticks/generic/CMakeLists.txt
@@ -1,11 +1,15 @@
 set(SOURCES ButtonMapping.cpp
             DriverReceiving.cpp
             FeatureHandling.cpp
-            InputHandling.cpp)
+            InputHandling.cpp
+            KeymapHandling.cpp
+)
 
 set(HEADERS ButtonMapping.h
             DriverReceiving.h
             FeatureHandling.h
-            InputHandling.h)
+            InputHandling.h
+            KeymapHandling.h
+)
 
 core_add_library(input_joystick_generic)
