--- a/xbmc/input/joysticks/CMakeLists.txt
+++ b/xbmc/input/joysticks/CMakeLists.txt
@@ -6,7 +6,9 @@ set(SOURCES DeadzoneFilter.cpp
             JoystickUtils.cpp
             RumbleGenerator.cpp)
 
-set(HEADERS DeadzoneFilter.h
+set(HEADERS interfaces/IKeyHandler.h
+            interfaces/IKeymapHandler.h
+            DeadzoneFilter.h
             DriverPrimitive.h
             IButtonMap.h
             IButtonMapCallback.h
